--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "cloudinary": "^2.0.3",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
     "react-lorem-ipsum": "^1.4.10",
     "react-redux": "^9.1.0",
